--- a/Medius.Example/Medius.Example/MainPage.xaml
+++ b/Medius.Example/Medius.Example/MainPage.xaml
@@ -5,8 +5,8 @@
              xmlns:medius="clr-namespace:Medius.Core.Controls;assembly=Medius.Core"
              x:Class="Medius.Example.MainPage">
 
-  <StackLayout BackgroundColor="Fuchsia">
-    <StackLayout Orientation="Horizontal" BackgroundColor="Lime">
+  <StackLayout>
+    <StackLayout Orientation="Horizontal">
       <Button Text="Page 1" Clicked="Page1Click"></Button>
       <Button Text="Page 2" Clicked="Page2Click"></Button>
       <Button Text="Page 3" Clicked="Page3Click"></Button>
