--- a/Medius.Example/Medius.Example/App.xaml
+++ b/Medius.Example/Medius.Example/App.xaml
@@ -8,12 +8,13 @@
       <Color x:Key="AltBackground">#585858</Color>
       <Color x:Key="Foreground">#7CAFC2</Color>
 
-      <Style TargetType="ContentPage">
+      <Style TargetType="Page" ApplyToDerivedTypes="True">
         <Setter Property="BackgroundColor" Value="{StaticResource Background}" />
       </Style>
-
-      <Style TargetType="StackLayout">
+      
+      <Style TargetType="ListView">
         <Setter Property="BackgroundColor" Value="{StaticResource Background}" />
+        <Setter Property="SeparatorColor" Value="{StaticResource AltBackground}" />
       </Style>
 
       <Style TargetType="Button">
